# pull_api

./: Dockerfile  Gemfile  Modelfile  README.md  captcha.py  index.js  package.json  pyproject.toml
.kamal/hooks/: post-deploy
app/avo/resources/: api_session.rb  post.rb  recaptcha_challenge.rb  user.rb
app/channels/application_cable/: connection.rb
app/controllers/api/: recaptcha_solver_controller.rb
app/controllers/app/: application_controller.rb
app/controllers/avo/: recaptcha_challenges_controller.rb
app/controllers/concerns/: api_authentication.rb
app/controllers/oas_rails/: oas_rails_controller.rb
app/controllers/public/: application_controller.rb
app/javascript/: application.js  landing.js
app/models/: api_session.rb  recaptcha_challenge.rb
app/views/layouts/: app_application.html.erb  application.html.erb  public_application.html.erb
app/views/pwa/: manifest.json.erb
app/views/shared/: _footer.html.erb  _navbar.html.erb
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
config/initializers/: oas_rails.rb
db/: schema.rb  secondary_schema.rb
db/migrate/: 20250426125343_create_recaptcha_challenges.rb
python_scripts/: recaptcha_audio_challenge.py  recaptcha_image_classification_challenge.py  recaptcha_image_segmentation.py  recaptcha_image_segmentation_challenge.py  recaptcha_images_classification_challenge.py  recaptcha_object_localization_challenge.py  recaptcha_yolo_object_localization_challenge.py  setup
test/factories/: recaptcha_challenges.rb
test/models/: recaptcha_challenge_test.rb
(+24 files in other folders)
